Step 3 implementation of gadets
